[package]
name = "ds"
description = "A library for controlling FIRST Robotics Competition robots"
license = "MIT/Apache-2.0"
repository = "https://github.com/drakeerv/ds-rs"
documentation = "https://docs.rs/ds"
readme = "README.md"
version = "1.2.5"
keywords = ["frc", "first", "robotics"]
categories = ["network-programming"]
authors = ["Kaitlyn Kenwell <redrield@gmail.com>", "Drake Fletcher <drakeerv@outlook.com>"]
edition = "2024"

[dependencies]
bitflags = "2.9"
byteorder = "1.5"
failure = "0.1"
chrono = "0.4"
crossbeam-channel = "0.5"
smallvec = "1.15"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
bytes = "1.10"
futures-channel = "0.3"
futures-util = { version = "0.3", features = ["sink", "async-await"] }
futures = "0.3"
fastrand = "2.3"
tokio-stream = "0.1"
