[package]
name = "ds"
description = "A library for controlling FIRST Robotics Competition robots"
license = "MIT/Apache-2.0"
repository = "https://github.com/drakeerv/ds-rs"
documentation = "https://docs.rs/ds"
readme = "README.md"
version = "1.2.5"
keywords = ["frc", "first", "robotics"]
categories = ["network-programming"]
authors = ["Kaitlyn Kenwell <redrield@gmail.com>", "Drake Fletcher <drakeerv@outlook.com>"]
edition = "2024"

[dependencies]
bitflags = "2.9"
byteorder = "1.5"
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "net"] }
bytes = "1.10"
futures-util = { version = "0.3", features = ["sink", "std"], default-features = false }
futures = { version = "0.3", features = ["std"], default-features = false }
tokio-stream = { version = "0.1", default-features = false }
anyhow = "1.0"
tokio-util = { version = "0.7", features = ["codec", "net"] }
